# pharmacy-chat-bot

./: README.md  env.py  main.py  pyproject.toml
prompts/: lead_assessment_high_volume.txt  lead_assessment_low_volume.txt  lead_assessment_medium_volume.txt  lead_assessment_unknown.txt  new_lead_system.txt
prompts/extractions/: contact_preference.txt  lead_information.txt
prompts/responses/: lead_assessment_low_volume.txt  missing_info_questions.txt  new_lead_greeting.txt  returning_customer_greeting.txt
prompts/system/: callback_notes.txt  callback_notes_template.txt  email_composer.txt  lead_notification_content.txt  lead_notification_subject.txt  returning_customer_system.txt  welcome_email_content.txt  welcome_email_subject.txt
src/api/: follow_up_actions.py
src/api/pharmacy/: client.py
src/core/: chatbot.py  models.py  pharmacy_service.py  prompt_manager.py
tests/: test_demo_scenarios.py  test_follow_up_actions.py  test_prompt_manager.py
