[project]
name = "pharmacy-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.108.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
